Fix Back and Forward buttons.

--- a/WpfCoreApp/MainWindow.xaml
+++ b/WpfCoreApp/MainWindow.xaml
@@ -21,7 +21,7 @@
             </MenuItem>
         </Menu>
         <DockPanel DockPanel.Dock="Top" Name="controlsPanel">
-            <Button Content=" &lt; " Margin="2,2,0,0" />
+            <Button Content=" &lt; " Margin="2,2,0,0" Click="BackButton_Click" />
             <Button Content=" &gt; " Margin="2,2,0,0" />
             <Button Content="Go" Margin="2,2,0,0" Click="NavigateButton_Click"/>
             <TextBox Name="txtAddress" Margin="2,2,0,0" KeyDown="txtAddress_KeyDown" />
